# chatgpt-conversations-formatter

./: .gitignore  README.md  pyproject.toml
apps/: format.py
src/conversations_formatter/: __init__.py
